# python-template

./: .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  release.yml.example
docs/: api.md  conventional-commits.md  development-setup.md  mise-tasks.md  requirements.md  testing.md
src/python_template/: __init__.py  example.py
tests/: __init__.py  test_example.py
